data/derived/comb/progs/unify/prog7642.ml.out
Characters 116-159:
  else clone "0" (List.length l1 - List.length l2) :: l2;;
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type string list
       but an expression was expected of type int list
       Type string is not compatible with type int 
